--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2018"
 
 [dependencies]
 git2 = "0.8.0"
-zip = "0.5.2"
+rusoto_core = "0.37.0"
+rusoto_secretsmanager = "0.37.0"
 walkdir = "2"
+zip = "0.5.2"
