--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 walkdir = "2"
 zip = "0.5.2"
+
+
+[[bin]]
+name = "accept"
+path = "src/main.rs"
+
