--- a/serverless.yaml
+++ b/serverless.yaml
@@ -4,7 +4,7 @@ provider:
   runtime: rust
   memorySize: 128
   stage: prod
-  region: us-east-1
+  region: us-west-1
 
   iamRoleStatements:
     - Effect: "Allow"
@@ -38,6 +38,12 @@ functions:
     events:
       - sqs:
           arn: !GetAtt WorkQueue.Arn
+    vpc:
+          securityGroupIds:
+            - !ImportValue network-AttachedNetworkDefaultSecurityGroup
+          subnetIds:
+            - !ImportValue network-AttachedNetworkLeftSubnet
+            - !ImportValue network-AttachedNetworkRightSubnet
 
 resources:
   Resources:
