--- a/serverless.yaml
+++ b/serverless.yaml
@@ -12,9 +12,19 @@ provider:
         - sqs:*
       Resource:
         - !GetAtt WorkQueue.Arn
+    - Effect: "Allow"
+      Action:
+        - secretsmanager:GetSecretValue
+      Resource:
+        - !Ref GitCredential
 
   environment:
     PUSHCODE_WORK_QUEUE: !Ref WorkQueue
+    CJ_PUSHCODE_GIT_CREDENTIALS_ID: !Join
+        - "/"
+        - - !Ref AWS::StackName
+          - GitCredential
+
 
 package:
   individually: true
@@ -54,5 +64,12 @@ resources:
       Properties:
           VersioningConfiguration:
               Status: Enabled
-
+    GitCredential:
+      Type: AWS::SecretsManager::Secret
+      Properties:
+        Name: !Join
+          - "/"
+          - - !Ref AWS::StackName
+            - GitCredential
+        SecretString: "REPLACEME"
 
